[gd_scene load_steps=11 format=3]

[ext_resource type="Script" path="res://Script/LDL/strength.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dc0dbvpblddrm" path="res://Art/Game_2/Ldl/215.png" id="2"]
[ext_resource type="PackedScene" uid="uid://b3qof5s6nwscy" path="res://Scene/BackPack/Box_1.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://3kuuo6xhsvf8" path="res://Art/Game_2/Ldl/212.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b3vnudfu5dgps" path="res://Art/Game_2/Ldl/202.png" id="6"]
[ext_resource type="Texture2D" uid="uid://uaufihqdbpsa" path="res://Art/LDL/176.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b6dxqh3lupp7u" path="res://Art/LDL/188.png" id="8"]
[ext_resource type="Texture2D" uid="uid://deb2p2c635j3a" path="res://Art/LDL/533.png" id="9"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="10"]

[node name="strength" type="Node2D"]
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="old_zb" type="Sprite2D" parent="."]
position = Vector2(150, 50)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="old_zb" parent="old_zb" instance=ExtResource( "3" )]
offset_left = -25.0
offset_top = -26.0
offset_right = 25.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[node name="n_q_1" type="Sprite2D" parent="."]
position = Vector2(50, 140)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="n_q_1" parent="n_q_1" instance=ExtResource( "3" )]
offset_left = -26.0
offset_top = -26.0
offset_right = 24.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[node name="number" type="Label" parent="n_q_1/n_q_1"]
layout_mode = 0
offset_left = -16.0
offset_top = 37.0
offset_right = 66.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="n_q_2" type="Sprite2D" parent="."]
position = Vector2(250, 140)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="n_q_2" parent="n_q_2" instance=ExtResource( "3" )]
offset_left = -25.0
offset_top = -26.0
offset_right = 25.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[node name="number2" type="Label" parent="n_q_2/n_q_2"]
layout_mode = 0
offset_left = -13.0
offset_top = 36.0
offset_right = 66.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="new_zb" type="Sprite2D" parent="."]
position = Vector2(150, 225)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="new_zb" parent="new_zb" instance=ExtResource( "3" )]
offset_left = -25.0
offset_top = -24.0
offset_right = 25.0
offset_bottom = 26.0
button_mask = 0
metadata/_edit_lock_ = true

[node name="jt" type="Sprite2D" parent="."]
position = Vector2(150, 135)
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="need_lh" type="Sprite2D" parent="."]
position = Vector2(250, 310)
texture = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="lh" type="Label" parent="need_lh"]
offset_left = 40.0
offset_top = -12.0
offset_right = 80.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource( "4" )
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="qh_" type="TextureButton" parent="."]
offset_left = 70.0
offset_top = 335.0
offset_right = 210.0
offset_bottom = 383.0
size_flags_horizontal = 6
texture_normal = ExtResource( "8" )
texture_pressed = ExtResource( "8" )
texture_hover = ExtResource( "9" )
stretch_mode = 3
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972549, 0.976471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "10" )
theme_override_font_sizes/font_size = 32
text = "装备强化"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="qh_" to="." method="_on_qh__pressed" flags=18]
